--- a/source/app/src/main/res/layout/activity_main.xml
+++ b/source/app/src/main/res/layout/activity_main.xml
@@ -17,18 +17,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/personsRecyclerView"
-        android:layout_width="390dp"
-        android:layout_height="649dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/frameLayout3"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
     <FrameLayout
         android:id="@+id/frameLayout3"
         android:layout_width="407dp"
@@ -44,13 +32,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="32dp"
+            android:layout_margin="46dp"
             android:clickable="true"
             android:focusable="true"
             app:fabSize="auto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic_baseline_add_24" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/personsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp" />
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
